@@ -22,35 +22,46 @@
     Drupal.panels_ipe.app_view.stopListening(Drupal.panels_ipe.app.get('saveTab'), 'change:active');
 
     // Add a new revert tab model.
-    var revert_tab = new Drupal.panels_ipe.TabModel({title: 'Revert to default', id: 'revert'});
-    Drupal.panels_ipe.app_view.tabsView.collection.add(revert_tab);
-    // @todo: Put this into a proper view?
-    Drupal.panels_ipe.app_view.listenTo(revert_tab, 'change:active', function () {
-      var entity = drupalSettings.panelizer.entity;
-      if (revert_tab.get('active') && !revert_tab.get('loading')) {
-        // Remove our changes and refresh the page.
-        revert_tab.set({loading: true});
-        $.ajax({
-          url: drupalSettings.path.baseUrl + 'admin/panelizer/panels_ipe/' + entity.entity_type_id + '/' + entity.entity_id + '/' + entity.view_mode + '/revert_to_default',
-          data: {},
-          type: 'POST'
-        }).done(function (data) {
-          location.reload();
-        });
-      }
-    });
+    if (drupalSettings.panelizer.user_permission.revert) {
+      var revert_tab = new Drupal.panels_ipe.TabModel({title: 'Revert to default', id: 'revert'});
+      Drupal.panels_ipe.app_view.tabsView.collection.add(revert_tab);
 
-    // Hide the 'Revert to default' button if we're already on a default.
-    if (drupalSettings.panels_ipe.panels_display.storage_type == 'panelizer_default') {
-      revert_tab.set({hidden: true});
+      // @todo: Put this into a proper view?
+      Drupal.panels_ipe.app_view.listenTo(revert_tab, 'change:active', function () {
+        var entity = drupalSettings.panelizer.entity;
+        if (revert_tab.get('active') && !revert_tab.get('loading')) {
+          // Remove our changes and refresh the page.
+          revert_tab.set({loading: true});
+          $.ajax({
+            url: drupalSettings.path.baseUrl + 'admin/panelizer/panels_ipe/' + entity.entity_type_id + '/' + entity.entity_id + '/' + entity.view_mode + '/revert_to_default',
+            data: {},
+            type: 'POST'
+          }).done(function (data) {
+            location.reload();
+          });
+        }
+      });
+
+      // Hide the 'Revert to default' button if we're already on a default.
+      if (drupalSettings.panels_ipe.panels_display.storage_type == 'panelizer_default') {
+        revert_tab.set({hidden: true});
+      }
     }
 
+    // Hide the 'Revert to default' button if the user does not have permission.
+    // if (!drupalSettings.panelizer.user_permission.revert) {
+    //   revert_tab.set({hidden: true});
+    // }
+
     // Add a new view for the save button to the TabsView.
-    Drupal.panels_ipe.app_view.tabsView.tabViews['save'] = new Drupal.panelizer.panels_ipe.SaveTabView({
+    var tabs = {
       model: Drupal.panels_ipe.app_view.model,
       tabsView: Drupal.panels_ipe.app_view.tabsView,
-      revertTab: revert_tab
-    });
+    };
+    if (typeof revert_tab !== 'undefined') {
+      tabs.revertTab = revert_tab;
+    }
+    Drupal.panels_ipe.app_view.tabsView.tabViews['save'] = new Drupal.panelizer.panels_ipe.SaveTabView(tabs);
   });
 
 }(jQuery, _, Backbone, Drupal));
