@@ -1,5 +1,7 @@
 Panelizer 8.x-3.x-dev, xxxx-xx-xx
 ---------------------------------
+#2850246 by DamienMcKenna: Added a new permission to control who has access to
+  the 'reset to default' option, added some tests for IPE functionality.
 
 
 Panelizer 8.x-3.0-beta1, 2017-02-04
